Added Kamon -> Prometheus -> Grafana metrics visualisation. Refactoring and mutation algorithm modifications.